# media_op

./: main.py  pyproject.toml
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx
frontend/src/components/: CreatorProductAnalysis.css  CreatorProductAnalysis.jsx  ProductMatrix.css  ProductMatrix.jsx  ProductVideoAnalysis.css  ProductVideoAnalysis.jsx
frontend/src/services/: api.js
media_op/: a.py
media_op/agent/: init.py
media_op/agent/node/: merchant.py  parse.py  role.py  type.py  wx_ad.py
media_op/agent/prompts/: merchant.md  product_category.md  role.md  template.py  wx_ad.md
media_op/biz/db/: __init__.py  mysql.py  wx.py
media_op/biz/model/: __init__.py  douyin.py  init.py  product.py  wx_chat.py
media_op/biz/service/: wx_auto.py
media_op/cache/: 师傅.csv  爆单9班投流群爆单10.txt
media_op/cache/weixin/: merchant_wx.csv
media_op/cache/weixin/chat/: z_AN..csv  z_BIACKFIRE_Olivia.csv  z_PED电解质水.csv  z_PED电解质水_content.txt  z_一甸园饮品_拾忆.csv  z_一甸园饮品_拾忆_content.txt  z_三稞宝.csv  z_三稞宝_content.txt  z_上稀圆食品.csv  z_上稀圆食品_content.txt  z_不等旗舰店.csv  z_不等旗舰店_content.txt  z_不集黑标旗舰店.csv  z_丝飘_张张.csv  z_个护_工厂.csv  z_个护_工厂_content.txt  (+253 more)
media_op/command/: bestsell.py  example.py  merchant.py  new_friends.py
media_op/config/: __init__.py  config.yaml  const.py  env.py  schema.py
media_op/config/database/: dev.yaml
media_op/config/hydra/: base.yaml
media_op/internal/chat/: biz.py  data.py
media_op/internal/product/: biz.py  data.py
media_op/internal/wx_auto/: biz.py  type.py
prd/: 01_需求.md  产品需求文档.md  架构设计.md
(+1 files in other folders)
